--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -34,6 +34,20 @@
 				<strong>Answer:</strong> &lt;p&gt;This is a paragraph&lt;/p&gt;
 			</p>
 		</li>
+		<li>
+			<p>
+				<strong>Question:</strong>Identify the odd one from these tags: &lt;span&gt;, &lt;p&gt;, &lt;a&gt;, &lt;i&gt; and state the reason?
+				<br>
+				<strong>Answer:</strong>The &lt;p&gt; tag is the odd one out because it is a Block element whereas the rest are inline elements.
+			</p>
+		</li>
+		<li>
+			<p>
+				<strong>Question:</strong> What are the tags required to create a navigation list in HTML?
+				<br>
+				<strong>Answer:</strong> The tags required to create a navigation list in HTML are an ordered or unordered list tag (&lt;ol&gt; or &lt;ul&gt;), a list item &lt;li&gt;, and finally a link tag &lt;a&gt;.
+			</p>
+		</li>
 	</ol>
 
 </body>
