--- a/lib2024/inclass-1/index.html
+++ b/lib2024/inclass-1/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Title</title>
 	<meta charset="utf-8">
 </head>
 <body>
 	<header>
 		<h1>First Heading</h1>
+		<nav>
+			<ol>
+				<li>
+					<a href="https://algonquincollege.com" title="Algonquin">Algonquin</a>
+				</li>
+				<li>
+					<a href="https://algonquincollege.com" target="blank" title="Algonquin">Algonquin in new Tab</a>
+				</li>
+				<li>
+					<a href="https://algonquincollege.com" title="Algonquin">3rd link</a>
+				</li>
+			</ol>
+		</nav>
 	</header>
-	<nav>
-		<ol>
-			<li>
-				<a href="https://algonquincollege.com">Algonquin</a>
-			</li>
-			<li>
-				<a href="https://algonquincollege.com" target="blank">Algonquin in new Tab</a>
-			</li>
-			<li>
-				<a href="https://algonquincollege.com">3rd link</a>
-			</li>
-		</ol>
-	</nav>
+	
 	<main>
 		<section>
 			<h2>Second Heading</h2>
@@ -41,10 +42,11 @@
 			</aside>
 		</section>
 	</main>
+
+	<footer>
+		<div>
+			<span>Footer Text</span>
+		</div>
+	</footer>
 </body>
-<footer>
-	<div>
-		<span>Footer Text</span>
-	</div>
-</footer>
 </html>
