--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -89,6 +89,8 @@
 				telephone service area.
 			</p>
 		</div>
+	</main>
+	<footer>
 		<div>
 			<h2>Hidden comment:</h2> <!-- I wasn't sure what you wanted for the "special tags" section? I didn't see anything in the reading or notes. -->
 		</div>
@@ -96,7 +98,6 @@
 			<img src="img/qa2.png" alt="This is my qa for assignment 2">
 			<figcaption>It wouldn't let me save the pdf? I'll ask you about it on Tuesday, but in the meantime, have them here!</figcaption>
 		</div>
-	</main>
-
+	</footer>
 </body>
 </html>
